compiler/testData/diagnostics/tests/redeclarations/RedeclarationMainInFile.kt
// KT-9733 No error shown for 2 "main" functions in the same file

<!CONFLICTING_OVERLOADS!>fun main(args: Array<String>)<!> {}
<!CONFLICTING_OVERLOADS!>fun main(args: Array<String>)<!> {}